projects/phoron/phoron_rs/phoron_asm/grammar/phoron.c
/* A recursive-descent parser generated by peg 0.1.18 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 89
#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_DOT_symbol(yycontext *yy); /* 89 */
YY_RULE(int) yy_DOUBLE_QUOTE_symbol(yycontext *yy); /* 88 */
YY_RULE(int) yy_String(yycontext *yy); /* 87 */
YY_RULE(int) yy_DEFAULT_keyword(yycontext *yy); /* 86 */
YY_RULE(int) yy_High(yycontext *yy); /* 85 */
YY_RULE(int) yy_Low(yycontext *yy); /* 84 */
YY_RULE(int) yy_TABLE_SWITCH_keyword(yycontext *yy); /* 83 */
YY_RULE(int) yy_DefaultSwitchPair(yycontext *yy); /* 82 */
YY_RULE(int) yy_LookupSwitchPair(yycontext *yy); /* 81 */
YY_RULE(int) yy_LOOKUP_SWITCH_keyword(yycontext *yy); /* 80 */
YY_RULE(int) yy_TableSwitch(yycontext *yy); /* 79 */
YY_RULE(int) yy_LookupSwitch(yycontext *yy); /* 78 */
YY_RULE(int) yy_Ins(yycontext *yy); /* 77 */
YY_RULE(int) yy_ComplexInstruction(yycontext *yy); /* 76 */
YY_RULE(int) yy_SimpleInstruction(yycontext *yy); /* 75 */
YY_RULE(int) yy_USING_keyword(yycontext *yy); /* 74 */
YY_RULE(int) yy_TO_keyword(yycontext *yy); /* 73 */
YY_RULE(int) yy_FROM_keyword(yycontext *yy); /* 72 */
YY_RULE(int) yy_CATCH_keyword(yycontext *yy); /* 71 */
YY_RULE(int) yy_THROWS_keyword(yycontext *yy); /* 70 */
YY_RULE(int) yy_LOCALS_keyword(yycontext *yy); /* 69 */
YY_RULE(int) yy_STACK_keyword(yycontext *yy); /* 68 */
YY_RULE(int) yy_LIMIT_keyword(yycontext *yy); /* 67 */
YY_RULE(int) yy_CatchDirective(yycontext *yy); /* 66 */
YY_RULE(int) yy_ThrowsDirective(yycontext *yy); /* 65 */
YY_RULE(int) yy_LocalsDirective(yycontext *yy); /* 64 */
YY_RULE(int) yy_StackDirective(yycontext *yy); /* 63 */
YY_RULE(int) yy_COLON_symbol(yycontext *yy); /* 62 */
YY_RULE(int) yy_Label(yycontext *yy); /* 61 */
YY_RULE(int) yy_Instruction(yycontext *yy); /* 60 */
YY_RULE(int) yy_Directive(yycontext *yy); /* 59 */
YY_RULE(int) yy_VoidDescriptor(yycontext *yy); /* 58 */
YY_RULE(int) yy_ReturnDescriptor(yycontext *yy); /* 57 */
YY_RULE(int) yy_RIGHT_PAREN_symbol(yycontext *yy); /* 56 */
YY_RULE(int) yy_ParameterDescriptor(yycontext *yy); /* 55 */
YY_RULE(int) yy_LEFT_PAREN_symbol(yycontext *yy); /* 54 */
YY_RULE(int) yy_STRICT_keyword(yycontext *yy); /* 53 */
YY_RULE(int) yy_NATIVE_leyword(yycontext *yy); /* 52 */
YY_RULE(int) yy_VARARGS_keyword(yycontext *yy); /* 51 */
YY_RULE(int) yy_BRIDGE_keyword(yycontext *yy); /* 50 */
YY_RULE(int) yy_SYNCHRONIZED_keyword(yycontext *yy); /* 49 */
YY_RULE(int) yy_METHOD_END_keyword(yycontext *yy); /* 48 */
YY_RULE(int) yy_END_keyword(yycontext *yy); /* 47 */
YY_RULE(int) yy_Statement(yycontext *yy); /* 46 */
YY_RULE(int) yy_MethodDescriptor(yycontext *yy); /* 45 */
YY_RULE(int) yy_MethodAccessFlag(yycontext *yy); /* 44 */
YY_RULE(int) yy_METHOD_keyword(yycontext *yy); /* 43 */
YY_RULE(int) yy_QuotedString(yycontext *yy); /* 42 */
YY_RULE(int) yy_Integer(yycontext *yy); /* 41 */
YY_RULE(int) yy_Float(yycontext *yy); /* 40 */
YY_RULE(int) yy_ComponentType(yycontext *yy); /* 39 */
YY_RULE(int) yy_LEFT_BRACKET_symbol(yycontext *yy); /* 38 */
YY_RULE(int) yy_SEMICOLON_symbol(yycontext *yy); /* 37 */
YY_RULE(int) yy_ArrayType(yycontext *yy); /* 36 */
YY_RULE(int) yy_ObjectType(yycontext *yy); /* 35 */
YY_RULE(int) yy_BaseType(yycontext *yy); /* 34 */
YY_RULE(int) yy_FieldType(yycontext *yy); /* 33 */
YY_RULE(int) yy_TRANSIENT_keyword(yycontext *yy); /* 32 */
YY_RULE(int) yy_VOLATILE_keyword(yycontext *yy); /* 31 */
YY_RULE(int) yy_STATIC_keyword(yycontext *yy); /* 30 */
YY_RULE(int) yy_PROTECTED_keyword(yycontext *yy); /* 29 */
YY_RULE(int) yy_PRIVATE_keyword(yycontext *yy); /* 28 */
YY_RULE(int) yy_FieldDefaultValue(yycontext *yy); /* 27 */
YY_RULE(int) yy_EQUAL_symbol(yycontext *yy); /* 26 */
YY_RULE(int) yy_FieldTypeDescriptor(yycontext *yy); /* 25 */
YY_RULE(int) yy_FieldAccessFlag(yycontext *yy); /* 24 */
YY_RULE(int) yy_FIELD_keyword(yycontext *yy); /* 23 */
YY_RULE(int) yy_skip(yycontext *yy); /* 22 */
YY_RULE(int) yy_NameRest(yycontext *yy); /* 21 */
YY_RULE(int) yy_NameStart(yycontext *yy); /* 20 */
YY_RULE(int) yy_MODULE_keyword(yycontext *yy); /* 19 */
YY_RULE(int) yy_ENUM_keyword(yycontext *yy); /* 18 */
YY_RULE(int) yy_ANNOTATION_keyword(yycontext *yy); /* 17 */
YY_RULE(int) yy_SYNTHETIC_keyword(yycontext *yy); /* 16 */
YY_RULE(int) yy_ABSTRACT_keyword(yycontext *yy); /* 15 */
YY_RULE(int) yy_INTERFACE_keyword(yycontext *yy); /* 14 */
YY_RULE(int) yy_SUPER_keyword(yycontext *yy); /* 13 */
YY_RULE(int) yy_FINAL_keyword(yycontext *yy); /* 12 */
YY_RULE(int) yy_PUBLIC_keyword(yycontext *yy); /* 11 */
YY_RULE(int) yy_Name(yycontext *yy); /* 10 */
YY_RULE(int) yy_ClassAccessFlag(yycontext *yy); /* 9 */
YY_RULE(int) yy_CLASS_keyword(yycontext *yy); /* 8 */
YY_RULE(int) yy_MethodDecl(yycontext *yy); /* 7 */
YY_RULE(int) yy_FieldDecl(yycontext *yy); /* 6 */
YY_RULE(int) yy_SuperDecl(yycontext *yy); /* 5 */
YY_RULE(int) yy_ClassDecl(yycontext *yy); /* 4 */
YY_RULE(int) yy_eof(yycontext *yy); /* 3 */
YY_RULE(int) yy_Header(yycontext *yy); /* 2 */
YY_RULE(int) yy_Program(yycontext *yy); /* 1 */


YY_RULE(int) yy_DOT_symbol(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "DOT_symbol"));  if (!yymatchChar(yy, '.')) goto l1;  if (!yy_skip(yy)) goto l1;
  yyprintf((stderr, "  ok   %s @ %s\n", "DOT_symbol", yy->__buf+yy->__pos));
  return 1;
  l1:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "DOT_symbol", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_DOUBLE_QUOTE_symbol(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "DOUBLE_QUOTE_symbol"));  if (!yymatchChar(yy, '"')) goto l2;
  yyprintf((stderr, "  ok   %s @ %s\n", "DOUBLE_QUOTE_symbol", yy->__buf+yy->__pos));
  return 1;
  l2:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "DOUBLE_QUOTE_symbol", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_String(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "String"));  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l3;
  l4:;	
  {  int yypos5= yy->__pos, yythunkpos5= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l5;  goto l4;
  l5:;	  yy->__pos= yypos5; yy->__thunkpos= yythunkpos5;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "String", yy->__buf+yy->__pos));
  return 1;
  l3:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "String", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_DEFAULT_keyword(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "DEFAULT_keyword"));  if (!yymatchString(yy, "default")) goto l6;  if (!yy_skip(yy)) goto l6;
  yyprintf((stderr, "  ok   %s @ %s\n", "DEFAULT_keyword", yy->__buf+yy->__pos));
  return 1;
  l6:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "DEFAULT_keyword", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_High(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "High"));  if (!yy_Integer(yy)) goto l7;
  yyprintf((stderr, "  ok   %s @ %s\n", "High", yy->__buf+yy->__pos));
  return 1;
  l7:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "High", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Low(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Low"));  if (!yy_Integer(yy)) goto l8;
  yyprintf((stderr, "  ok   %s @ %s\n", "Low", yy->__buf+yy->__pos));
  return 1;
  l8:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Low", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_TABLE_SWITCH_keyword(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "TABLE_SWITCH_keyword"));  if (!yymatchString(yy, "tableswitch")) goto l9;  if (!yy_skip(yy)) goto l9;
  yyprintf((stderr, "  ok   %s @ %s\n", "TABLE_SWITCH_keyword", yy->__buf+yy->__pos));
  return 1;
  l9:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "TABLE_SWITCH_keyword", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_DefaultSwitchPair(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "DefaultSwitchPair"));  if (!yy_DEFAULT_keyword(yy)) goto l10;  if (!yy_COLON_symbol(yy)) goto l10;  if (!yy_Label(yy)) goto l10;
  yyprintf((stderr, "  ok   %s @ %s\n", "DefaultSwitchPair", yy->__buf+yy->__pos));
  return 1;
  l10:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "DefaultSwitchPair", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_LookupSwitchPair(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "LookupSwitchPair"));  if (!yy_Integer(yy)) goto l11;  if (!yy_COLON_symbol(yy)) goto l11;  if (!yy_Label(yy)) goto l11;
  yyprintf((stderr, "  ok   %s @ %s\n", "LookupSwitchPair", yy->__buf+yy->__pos));
  return 1;
  l11:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "LookupSwitchPair", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_LOOKUP_SWITCH_keyword(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "LOOKUP_SWITCH_keyword"));  if (!yymatchString(yy, "lookupswitch")) goto l12;  if (!yy_skip(yy)) goto l12;
  yyprintf((stderr, "  ok   %s @ %s\n", "LOOKUP_SWITCH_keyword", yy->__buf+yy->__pos));
  return 1;
  l12:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "LOOKUP_SWITCH_keyword", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_TableSwitch(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "TableSwitch"));  if (!yy_TABLE_SWITCH_keyword(yy)) goto l13;
  {  int yypos14= yy->__pos, yythunkpos14= yy->__thunkpos;  if (!yy_Low(yy)) goto l14;  if (!yy_High(yy)) goto l14;  if (!yy_Label(yy)) goto l14;
  l16:;	
  {  int yypos17= yy->__pos, yythunkpos17= yy->__thunkpos;  if (!yy_Label(yy)) goto l17;  goto l16;
  l17:;	  yy->__pos= yypos17; yy->__thunkpos= yythunkpos17;
  }  goto l15;
  l14:;	  yy->__pos= yypos14; yy->__thunkpos= yythunkpos14;
  }
  l15:;	  if (!yy_DefaultSwitchPair(yy)) goto l13;
  yyprintf((stderr, "  ok   %s @ %s\n", "TableSwitch", yy->__buf+yy->__pos));
  return 1;
  l13:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "TableSwitch", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_LookupSwitch(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "LookupSwitch"));  if (!yy_LOOKUP_SWITCH_keyword(yy)) goto l18;
  l19:;	
  {  int yypos20= yy->__pos, yythunkpos20= yy->__thunkpos;  if (!yy_LookupSwitchPair(yy)) goto l20;  goto l19;
  l20:;	  yy->__pos= yypos20; yy->__thunkpos= yythunkpos20;
  }  if (!yy_DefaultSwitchPair(yy)) goto l18;
  yyprintf((stderr, "  ok   %s @ %s\n", "LookupSwitch", yy->__buf+yy->__pos));
  return 1;
  l18:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "LookupSwitch", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Ins(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Ins"));  if (!yy_Name(yy)) goto l21;
  yyprintf((stderr, "  ok   %s @ %s\n", "Ins", yy->__buf+yy->__pos));
  return 1;
  l21:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Ins", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_ComplexInstruction(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "ComplexInstruction"));
  {  int yypos23= yy->__pos, yythunkpos23= yy->__thunkpos;  if (!yy_LookupSwitch(yy)) goto l24;  goto l23;
  l24:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yy_TableSwitch(yy)) goto l22;
  }
  l23:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "ComplexInstruction", yy->__buf+yy->__pos));
  return 1;
  l22:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "ComplexInstruction", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_SimpleInstruction(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "SimpleInstruction"));
  {  int yypos26= yy->__pos, yythunkpos26= yy->__thunkpos;  if (!yy_Ins(yy)) goto l27;  if (!yy_Integer(yy)) goto l27;  if (!yy_Integer(yy)) goto l27;  goto l26;
  l27:;	  yy->__pos= yypos26; yy->__thunkpos= yythunkpos26;  if (!yy_Ins(yy)) goto l28;  if (!yy_Integer(yy)) goto l28;  goto l26;
  l28:;	  yy->__pos= yypos26; yy->__thunkpos= yythunkpos26;  if (!yy_Ins(yy)) goto l25;  if (!yy_QuotedString(yy)) goto l25;
  }
  l26:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "SimpleInstruction", yy->__buf+yy->__pos));
  return 1;
  l25:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "SimpleInstruction", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_USING_keyword(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "USING_keyword"));  if (!yymatchString(yy, "using")) goto l29;  if (!yy_skip(yy)) goto l29;
  yyprintf((stderr, "  ok   %s @ %s\n", "USING_keyword", yy->__buf+yy->__pos));
  return 1;
  l29:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "USING_keyword", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_TO_keyword(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
